--- a/src/components/InfoLanding/InfoLandingHero/InfoLandingHero.module.css
+++ b/src/components/InfoLanding/InfoLandingHero/InfoLandingHero.module.css
@@ -41,6 +41,7 @@ h3.hero_subtitle{
 .form_max_width{
     max-width: 100%;
     width: 500px;
+    padding-bottom: 72px;
 }
 
 /* info landing hero with form css  */
@@ -48,7 +49,7 @@ h3.hero_subtitle{
     margin-top: 18px;
 }
 .usecase_left_content{
-    padding: 48px 50px 80px 68px;
+    padding: 41px 50px 80px 68px;
     background-color: #080F20;
 }
 .usecase_right_content{
@@ -86,9 +87,6 @@ h3.hero_subtitle{
     }
     .landing_hero_pointers_wrapper{
         margin-top: 15px;
-    }
-    .usecase_left_content{
-        padding: 48px 16px;
     }
     .form_max_width form{
         margin: auto;
@@ -164,6 +162,9 @@ h3.hero_subtitle{
     }
     .usecase_left_content_wrapper, .usecase_section_pera{
         max-width: 100%;
+    }
+    .form_max_width{
+        padding-bottom: 0;
     }
 }
 
