--- a/src/components/InfoLanding/InfoLandingUseCase/InfoLandingUseCase.module.css
+++ b/src/components/InfoLanding/InfoLandingUseCase/InfoLandingUseCase.module.css
@@ -81,7 +81,7 @@
 }
 @media screen and (max-width:767px) {
     .use_case_section{
-        padding: 70px 0;
+        padding: 54px 0;
     }
     .use_case_left{
         margin-bottom: 230px;
